clusters/prd/platform/envoy-gateway/templates/argocd-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: lab
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - argocd.lab.jacobdrury.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
