clusters/prd/platform/envoy-gateway/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: lab
    namespace: envoy-gateway-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: lab
  namespace: envoy-gateway-system
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.lab.jacobdrury.com"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: lab-wildcard-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: https-apex
      protocol: HTTPS
      port: 443
      hostname: lab.jacobdrury.com
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: lab-wildcard-tls
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https
  namespace: envoy-gateway-system
spec:
  parentRefs:
    - name: lab
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
